# backend_my_event

./: .dockerignore  .env.example  Dockerfile  README.md  build_back.sh  build_defectdojo.sh  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cd.yml  security.yml
api/: __init__.py  categories.py  category.py  event.py  events.py  location.py  locations.py  user.py  users.py
celery_worker/: celery_app.py  tasks.py
db/: config.py
infrastructure/: .gitignore  ec2.tf  vpc.tf
migrations/: env.py
migrations/versions/: 4ac8b9bb6a9f_modify_models.py  8e11ac7ac483_migrate_all_models.py  8e6ff7953d4f_migrate_all_models.py  f47674df85d5_modify_models.py
models/: base.py  category.py  event.py  location.py  user.py
schemas/: __init__.py  category.py  event.py  location.py  user.py
services/: auth_services.py  category_services.py  elasticsearch_services.py  event_services.py  location_services.py  user_services.py
tests/: test_auth_service.py  test_category_services.py
utils/: auths.py  constants.py  email.py  enums.py
